--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myfeeds",
+  "name": "treilla",
   "version": "0.1.0",
   "repository": "https://github.com/francoischalifour/myfeeds.git",
   "license": "MIT",
